crates/toml/tests/snapshots/invalid/inline-table/linebreak-03.stderr
TOML parse error at line 1, column 9
  |
1 | t = {a=1
  |         ^
newlines are unsupported in inline tables, expected nothing
